finished Discount&policis v2 inclunding test ft. Dor&Noam